ci(docker) fix dockerfile